# amorphous-oxides-workflow

./: README.md  pyproject.toml
config-examples/: config-Cs4Ir24O42.yaml  config.yaml  local-gpr-config.yaml
oxide_nanocluster_workflow/: calculators.py  callback.py  config.py  filters.py  local_model.py  restart_agox.py  run_agox.py  surface.py  utils.py
scripts/: 0-agox.py  0_1-restart-agox.py  1-energy-filter.py  2-graph-filter-1.py  3-local-gpr-train.py  4-local-gpr-relax.py  5-graph-filter-2.py  6-dft-relax.py  7-graph-filter-3.py
