[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "oxide-nanocluster-workflow"
version = "1.0"
authors = [{name = "Luuk Kempen"}]
readme = "README.md"
requires-python = ">= 3.9"
license = {text = "GPLv3"}
dependencies = [
    "agox",
    "ase",
    "numpy",
    "pydantic",
    "pyyaml",
    "scipy"
]
